<resources>
    <string name="app_name">EventReminder</string>

    <string name="next_events_page_toolbar_title">Ближайшие события</string>
    <string name="all_events_page_toolbar_title">Все события</string>

    <string name="next_events_title">Последующие:</string>
    <string name="view_all_button_text">Смотреть все</string>
    <string name="no_data_text">Нет событий</string>
    <string name="today">Сегодня!</string>
    <string name="tomorrow">Завтра</string>
    <string name="two_days">Послезавтра</string>
    <string name="days_1">дней</string>
    <string name="days_2">дня</string>
    <string name="after">Через</string>
    <string name="birthday">День рождения</string>
    <string name="holiday">Праздник</string>
    <string name="other_event">Другое событие</string>
    <string name="select_action_for">"Выберите действие для "</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="add_event_button_text">Добавить</string>
    <string name="save_event_button_text">Сохранить</string>
    <string name="error">Ошибка</string>
    <string name="save_success">Данные сохранены</string>
    <string name="name_hint">Имя</string>
    <string name="additional_info_hint">Описание события</string>
    <string name="missing_date">Необходимо выбрать дату</string>
    <string name="missing_person">Необходимо указать имя</string>
    <string name="missing_desc">Необходимо заполнить описание события</string>
    <string name="missing_any_info">Необходимо заполнить информацию о событии или указать имя</string>
    <string name="select_date">Выбрать дату</string>
    <string name="new_event_page_toolbar_title">Новое событие</string>
    <string name="edit_event_page_toolbar_title">Редактировать событие</string>
    <string name="event_type_title">Тип события:</string>
    <string name="delete_all_button_text">Удалить все</string>
    <string name="delete_all">Удалить все записи</string>
    <string name="notification_channel_description">App notification channel</string>
    <string name="notification_channel_name">Notification channel name</string>
    <string name="notification_several_events_title">Ближайшие события</string>


    <string-array name="spinner_event_types_array">
        <item>@string/birthday</item>
        <item>@string/holiday</item>
        <item>@string/other_event</item>
    </string-array>

</resources>
