<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="ru.mpoperechny.eventreminder.utilites.UtilsKt"/>

        <variable
            name="viewModel"
            type="ru.mpoperechny.eventreminder.viewmodel.NextEventsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.NextEventActivity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_data_text"
            android:textSize="20sp"
            android:visibility="@{viewModel.emptyData ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/nextEventCard"
            style="@style/ERCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            app:layout_constrainedHeight="true"
            app:layout_constraintHeight_max="300dp"
            app:layout_constraintHeight_min="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{viewModel.emptyData ? View.GONE : View.VISIBLE}">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/upTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/calendar_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imageView"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eventDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="18sp"
                            android:text="@{UtilsKt.timeToDateString(viewModel.nearestEventDay)}"/>

                        <TextView
                            android:id="@+id/eventDaysLeft"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@{UtilsKt.daysLeftString(context, viewModel.nearestEventDaysLeft)}"/>
                    </LinearLayout>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nextEventsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/upTable"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="@dimen/margin_mid"
                    app:items = "@{viewModel.nearestEvents}"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nextText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid"
            android:gravity="center_vertical|center_horizontal|top"
            android:text="@string/next_events_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextEventCard"
            android:visibility="@{viewModel.emptyData ? View.GONE : View.VISIBLE}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/otherEventsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btAllEvents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextText"
            android:visibility="@{viewModel.emptyData ? View.GONE : View.VISIBLE}"
            app:items = "@{viewModel.eventsExceptNearest}"/>

        <Button
            android:id="@+id/btAllEvents"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:paddingStart="@dimen/list_item_margin_left"
            android:paddingEnd="@dimen/list_item_margin_right"
            android:text="@string/view_all_button_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>